--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="profile-header">
             <h1>NSWITECH</h1>
-            <p>Smart NFC Card Business<br>All in One Solution</p>
+            <p>where speed meets tech: fast, efficient, and cutting-edge solutions designed to keep you ahead</p>
         </div>
         
         <div class="social-links">
@@ -121,4 +121,5 @@
     
 </body>
 </html>
+
 
